--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ iTweakTeacher.ipa
 src/locale/en_US/resources.properties
 
 bin-debug/locale/en_US/resources.properties.example
+
+iTweakTeacherSigny.apk
